# ESP32-S3-Touch-LCD-4B

./: LICENSE  README.md  esp32se-touch-lcd-4b copy.ino  esp32se-touch-lcd-4b.ino  filelist.txt  main.ino  ui.h  ui_img_scenes_cloud_night_png.c  ui_img_weather_day_png.c  ui_img_weather_night_fog_png.c  ui_img_weather_night_png.c  ui_img_weather_night_snow_png.c  ui_img_weather_thunder_storm_png.c  ui_logic.h  ui_uiScreenSleep.c  ui_uiScreenSleep.h  weather.txt
assets/squarelinestudio/: SquareLine_Project.spj
docs/: HomeAssistant.md  HomeScreen.md  Settings.md
libraries/: lv_conf.h
libraries/Screens/: filelist.txt  ui.h  ui_HomeScreen.c  ui_HomeScreen.h  ui_SleepScreen.c  ui_SleepScreen.h  ui_comp.h  ui_comp_comproom.c  ui_comp_compswitch.c  ui_comp_hook.c  ui_comp_hook.h  ui_helpers.c  ui_img_1332138075.c  ui_img_133537992.c  ui_img_175529197.c  ui_img_252433816.c  ui_img_253037777.c  ui_img_285837919.c  ui_img_435491338.c  ui_img_827440816.c  ui_img_979047894.c  ui_img_bg_bg6rc2_png.c  (+4 more)
libraries/homescreen/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_HAScreen.c  ui_HAScreen.h  ui_comp.h  ui_comp_comproom.h  ui_comp_compswitch.c  ui_comp_compswitch.h  ui_comp_hook.c  ui_comp_hook.h  ui_img_1332138075.c  ui_img_175529197.c  ui_img_252433816.c  ui_img_450969811.c  ui_img_827440816.c
libraries/sleepscreen/: CMakeLists.txt  ui_uiScreenSleep.h
sleepscreen/: ui.c  ui_img_scenes_clear_night_png.c  ui_img_scenes_rain_day_png.c  ui_img_scenes_snow_day_png.c  ui_img_weather_day_cloud_png.c  ui_img_weather_night_cloud_png.c  ui_uiScreenSleep.c  ui_uiScreenSleep.h
(+43 files in other folders)
