SET(SOURCES ui_comp_compswitch.c
    ui_comp.c
    ui_HAScreen.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_bg_bg6rc2_png.c
    ui_img_253037777.c
    ui_img_133537992.c
    ui_img_827440816.c
    ui_img_1332138075.c
    ui_img_175529197.c
    ui_img_979047894.c
    ui_img_450969811.c
    ui_img_285837919.c
    ui_img_252433816.c
    ui_img_435491338.c
    ui_img_1965837174.c
    ui_img_bg_bg3rc2_png.c)

add_library(ui ${SOURCES})
